--- a/MySqlManager/MySqlManager/Components/Pages/Database/DatabaseNewTable.razor
+++ b/MySqlManager/MySqlManager/Components/Pages/Database/DatabaseNewTable.razor
@@ -110,6 +110,7 @@
 
     private void ResetView()
     {
+        _tableName = "";
         _tableLines = new List<NewTableRow>();
         for (var i = 0; i < AmountStartCols; i++)
         {
