--- a/MySqlManager/MySqlManager/Components/Pages/Table/TableSql.razor
+++ b/MySqlManager/MySqlManager/Components/Pages/Table/TableSql.razor
@@ -5,13 +5,34 @@
 @implements IDisposable
 @inject SqlCommandService SqlCommandService
 @inject TopRowService TopRowService
+@inject TableInformationService TableInformationService
 @rendermode @(new InteractiveServerRenderMode(prerender: false))
 
 <h1>SQL</h1>
 Parameter: @Database / @Table
 <br /><br />
-<textarea @bind="SqlAreaContent" class="sqlarea"></textarea><br />
-<button class="btn btn-primary" @onclick="PressGo">Go</button>
+<div class="row">
+    <div class="col-9">
+        <textarea @bind="SqlAreaContent" class="sqlarea"></textarea><br />
+        <button class="btn btn-primary" @onclick="PressGo">Go</button>
+    </div>
+    <div class="col-3">
+        <table class="table table-sm table-bordered table-striped">
+            <tbody>
+                @foreach (var column in _columnInformations)
+                {
+                    <tr>
+                        <td>@column.Field</td>
+                        <td>@column.Type</td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+</div>
+
+
+
 @if (_resultExceptionText != null)
 {
     <div class="alert alert-danger mt-4" role="alert">
@@ -61,11 +82,14 @@ Parameter: @Database / @Table
     private RunSqlResult? _runSqlResult;
 
     private string? _resultExceptionText;
+    
+    private List<TableColumnInformation> _columnInformations = new List<TableColumnInformation>();
 
-    protected override void OnInitialized()
+    protected override async Task OnInitializedAsync()
     {
         _runSqlResult = null;
         TopRowService.SetTopRowForTableView(Database, Table, "sql");
+        await GetTableColumnsInfo();
     }
     
     public void Dispose()
@@ -90,6 +114,11 @@ Parameter: @Database / @Table
         }
 
         StateHasChanged();
+    }
+    
+    private async Task GetTableColumnsInfo()
+    {
+        _columnInformations = await TableInformationService.GetTableColumnInfos(Database, Table);
     }
 
 
