--- a/MySqlManager/MySqlManager/Components/Pages/Table/TableExport.razor
+++ b/MySqlManager/MySqlManager/Components/Pages/Table/TableExport.razor
@@ -11,16 +11,16 @@ Parameter: @Database / @Table
 
 @if (_dumpingTable)
 {
-    <div class="alert alert-warning">Duming database...</div>
+    <div class="alert alert-warning">Duming table...</div>
 }
 @if (_dumpingTableFinished)
 {
-    <div class="alert alert-success">Database dumped!</div>
+    <div class="alert alert-success">Table dumped!</div>
 }
 
 @if (MySqlDumpService.IsCommandAvailable())
 {
-    <div class="mt-3 mb-3"><button class="btn btn-primary" @onclick="DumpTableButton">Dump Database</button></div>
+    <div class="mt-3 mb-3"><button class="btn btn-primary" @onclick="DumpTableButton">Dump Table</button></div>
 }
 
 @code {
