new table all data types

--- a/MySqlManager/MySqlManager/Components/Pages/Database/DatabaseNewTable.razor
+++ b/MySqlManager/MySqlManager/Components/Pages/Database/DatabaseNewTable.razor
@@ -46,11 +46,38 @@
                         <option>TEXT</option>
                         <option>DATE</option>
                         <optgroup label="Numeric">
+                            <option>BOOL</option>
+                            <option>BOOLEAN</option>
+                            <option>BIT</option>
                             <option>TINYINT</option>
                             <option>SMALLINT</option>
                             <option>MEDIUMINT</option>
+                            <option>BIGINT</option>
+                            <option>INT</option>
                             <option>FLOAT</option>
                             <option>DECIMAL</option>
+                            <option>DOUBLE</option>
+                        </optgroup>
+                        <optgroup label="String">
+                            <option>CHAR</option>
+                            <option>VARCHAR</option>
+                            <option>BINARY</option>
+                            <option>VARBINARY</option>
+                            <option>TINYBLOB</option>
+                            <option>MEDIUMBLOB</option>
+                            <option>LONGBLOB</option>
+                            <option>BLOB</option>
+                            <option>TINYTEXT</option>
+                            <option>MEDIUMTEXT</option>
+                            <option>LONGTEXT</option>
+                            <option>TEXT</option>
+                        </optgroup>
+                        <optgroup label="Date and Time">
+                            <option>DATE</option>
+                            <option>DATETIME</option>
+                            <option>TIMESTAMP</option>
+                            <option>TIME</option>
+                            <option>YEAR</option>
                         </optgroup>
                     </select>
                 </td>
