--- a/MySqlManager/MySqlManager/Components/Pages/Database/DatabaseOverview.razor
+++ b/MySqlManager/MySqlManager/Components/Pages/Database/DatabaseOverview.razor
@@ -61,7 +61,7 @@ else
                         }
                     </td>
                     <td>
-                        <a style="cursor:pointer;" @onclick="@(e => { TruncateTable(table.Name); })">Truncate</a>
+                        <!--a style="cursor:pointer;" @onclick="@(e => { TruncateTable(table.Name); })">Truncate</!--a-->
                         <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#truncateModal" data-bs-table-name="@(table.Name)">
                             Truncate
                         </button>
@@ -96,25 +96,39 @@ else
         </table>
     </div>
                     
-    <div class="modal" tabindex="-1" id="truncateModal">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title">Modal title</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <p>Modal body text goes here.</p>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
-                </div>
-            </div>
-        </div>
-    </div> 
 }
 
+<div class="modal" tabindex="-1" id="truncateModal">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Modal title</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <p>Modal body text goes here.</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Truncate</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<script>
+    const truncateModal = document.getElementById('truncateModal');
+    truncateModal.addEventListener('show.bs.modal', function (event) {
+        const button = event.relatedTarget;
+        const tableName = button.getAttribute('data-bs-table-name');
+
+        const modalTitle = truncateModal.querySelector('.modal-title');
+        const modalBody = truncateModal.querySelector('.modal-body');
+
+        modalTitle.textContent = 'Truncate ' + tableName;
+        modalBody.innerHTML = '<p>Do you really want to truncate this table?</p>';
+    });
+</script>
 
 @code {
     private List<TableInformation>? _tableList;
