table sql view default input

--- a/MySqlManager/MySqlManager/Components/Pages/Table/TableSql.razor
+++ b/MySqlManager/MySqlManager/Components/Pages/Table/TableSql.razor
@@ -95,6 +95,7 @@ Parameter: @Database / @Table
     protected override async Task OnInitializedAsync()
     {
         _runSqlResult = null;
+        SqlAreaContent = $"SELECT * FROM `{Table}` WHERE 1";
         TopRowService.SetTopRowForTableView(Database, Table, "sql");
         await GetTableColumnsInfo();
     }
