--- a/MySqlManager/MySqlManager/Components/Pages/Table/TableExport.razor
+++ b/MySqlManager/MySqlManager/Components/Pages/Table/TableExport.razor
@@ -11,7 +11,7 @@ Parameter: @Database / @Table
 
 @if (_dumpingTable)
 {
-    <div class="alert alert-warning">Duming table...</div>
+    <div class="alert alert-warning">Duming table. Please wait...</div>
 }
 @if (_dumpingTableFinished)
 {
